--- a/VRChat/95/1172695.html
+++ b/VRChat/95/1172695.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "aXwyWMCEosvRfAN2i0MqcMNfJgB3oZfZPHOTqh0ByCM="></script>
+    "j2ih/C4t3PM2EGvjsnPR8MXEZ9ytQTZL5p9RPec0tHg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル (myomyo)","description":"-オリジナル3Dモデル (myomyo)\n\n-制作者  eve\n\n-VRChat向けの設定をしております\n\n\n\n-次のモデルの説明利用規約に記載されているので、\n購入前に必ずお読みいただき、ご購入をお願いいたします\n\n","url":"https://booth.pm/ja/items/1172695","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/083faa0e-4980-4940-a74b-eb814f88b371/i/1172695/2e329cfc-cf08-4a5a-a7b6-39417bbc0145_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="aXwyWMCEosvRfAN2i0MqcMNfJgB3oZfZPHOTqh0ByCM="></script>
+    nonce="j2ih/C4t3PM2EGvjsnPR8MXEZ9ytQTZL5p9RPec0tHg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1172695/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               33
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1172695/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               33
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
