--- a/VRChat/36/1172336.html
+++ b/VRChat/36/1172336.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "gtJKYwd3+oQfoHw/dtROFAH5yTZ30iQRjgRES+ADdOc="></script>
+    "5CnoVLFtrT1lxl/f3WBPT97E1ijOCKX4QJTpkCAanNI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Team batch","description":"Team shark tooth用のバッチです。\n\n△188\n\nギザ歯好きのためのギザ歯っ子チームです\nギザ歯アバターの子に着けてあげて下さい\n\n特に参加登録とかはいらないですが、使った時は報告してくれると嬉しいです。\n\nご連絡は@Orca_is_me_VRへ\n","url":"https://booth.pm/ja/items/1172336","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/f3e21dbb-3a98-47e6-aaba-233f59ae5751/i/1172336/c86aa36b-5502-4981-85af-6d7b88a31d14_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="gtJKYwd3+oQfoHw/dtROFAH5yTZ30iQRjgRES+ADdOc="></script>
+    nonce="5CnoVLFtrT1lxl/f3WBPT97E1ijOCKX4QJTpkCAanNI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1172336/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               60
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1172336/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               60
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
