--- a/VRChat/15/1171015.html
+++ b/VRChat/15/1171015.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "CQIZ4acILTESecJMisQvfICTqX7SXXVFEmQLpMjYY/E="></script>
+    "dunz5CLlvRQtM/S2Q9RH6kaaDqgXSAt1Ij3hcYlPvB0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"star earring","description":"長めの揺れるイヤリングです\n\n△868\n\nダイナミックボーンで揺らせるようにボーンを入れてあります\nボーンのearringのところにDBを設定してください\n\n商用以外でしたら改変、二次配布ご自由にどうぞ","url":"https://booth.pm/ja/items/1171015","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/f3e21dbb-3a98-47e6-aaba-233f59ae5751/i/1171015/05bbec8d-a309-4bc8-a411-4c88fae7e9e0_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="CQIZ4acILTESecJMisQvfICTqX7SXXVFEmQLpMjYY/E="></script>
+    nonce="dunz5CLlvRQtM/S2Q9RH6kaaDqgXSAt1Ij3hcYlPvB0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1171015/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               285
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1171015/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               285
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
