--- a/VRChat/01/1169501.html
+++ b/VRChat/01/1169501.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "CQ+s184kf7F0rthtA5xVpTZnfBSgvQvQQsh3+4whEow="></script>
+    "Xn33Lu31eKME73ApgLXtJPvlaW78fKLefRTWCkiXLyw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"サイバネ義手「Liberator RLA-01」【VRC想定】","description":"VRC想定機械義手　型番「RLA-01」を販売いたします！","url":"https://booth.pm/ja/items/1169501","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"500","highPrice":"2000"},"image":"https://booth.pximg.net/c/620x620/1b1a42d9-d78b-40e1-821f-cf3ab20d0f73/i/1169501/5443da6a-aa54-42d6-824f-d9360062f96e_base_resized.jpg"}
     </script>
@@ -92,7 +92,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="CQ+s184kf7F0rthtA5xVpTZnfBSgvQvQQsh3+4whEow="></script>
+    nonce="Xn33Lu31eKME73ApgLXtJPvlaW78fKLefRTWCkiXLyw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -116,6 +116,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -160,7 +162,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1169501/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               113
@@ -175,14 +177,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1169501/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               113
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
